--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  stacked: ^3.4.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -52,6 +53,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/images/init_screen_background.png
+    - assets/images/live_news_logo.png
+    - assets/images/Forward.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
